# logic-jigsaw

./: README.md  logic-jigsaw.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs  Pieces.hs
