name:                logic-jigsaw
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/krisajenkins/logic-jigsaw#readme
license:             BSD3
license-file:        LICENSE
author:              Kris Jenkins
maintainer:          krisajenkins@gmail.com
copyright:           2016 Kris Jenkins
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  other-modules:       Pieces
  build-depends:       base >= 4.7 && < 5
                     , logict
                     , containers
                     , formatting
                     , text
  default-language:    Haskell2010

executable logic-jigsaw
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , logic-jigsaw
  default-language:    Haskell2010

test-suite logic-jigsaw-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , logic-jigsaw
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/krisajenkins/logic-jigsaw
